<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:local="http://schemas.android.com/apk/res-auto"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        local:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp">

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/ibCustomBack"
            android:layout_width="wrap_content"
            android:layout_height="?android:attr/actionBarSize"
            android:background="?android:selectableItemBackground"
            android:elevation="1dp"
            android:onClick="onBackPressed"
            android:src="@drawable/ic_back_pressed" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/yourImage"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@mipmap/ic_launcher"
            android:layout_marginLeft="5dp"
            android:elevation="1dp" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="20dp"/>

    </android.support.v7.widget.Toolbar>



    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp"
    android:layout_marginRight="16dp">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/timer"
        android:textAppearance="?android:attr/textAppearanceSmallPopupMenu"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="37dp"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/block"
        />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/tenhrs"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/fifteenhrs"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/twentyhrs"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/thirtyhrs"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/radio4"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/fortyhrs"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/radio5"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/fortyfive"
            android:textSize="20sp"/>

    </RadioGroup>


</RelativeLayout>
    </LinearLayout>